<resources>
    <string name="am_app_name">RFDatabase</string>
    <string name="mm_action_about">About</string>
    <string name="fl_title">Frequencies listing</string>
    <string name="fl_select_country_text">Select a Country / Zone</string>
    <string name="uit_label">UIT Region : </string>
    <string name="uit_name">No country selected</string>
    <string name="flr_frequencies">Start Freq - End Freq</string>
    <string name="span_label">Span : </string>
    <string name="span_value">span</string>
    <string name="type_label">Type : </string>
    <string name="type_value">type</string>
    <string name="eirp_label">EIRP : </string>
    <string name="eirp_value">eirp</string>
    <string name="frequency_label">Frequency : </string>
    <string name="frequency_value">freq </string>
    <string name="wave_length_label">Wave Length : </string>
    <string name="wave_length_value">wavelength</string>
    <string name="mode_label">Mode : </string>
    <string name="mode_value">mode</string>
    <string name="use_label">Use : </string>
    <string name="use_value">use</string>
    <string name="space_label">Space</string>
    <string name="emergency_label">Emergency</string>
    <string name="flr_button_desc">Button to switch to frequency details</string>
    <string name="afd_title_label">Frequency details</string>
    <string name="unknown_data">Unknown data</string>
    <string name="no_internet_startup">No access to the internet. Will use the cached data.</string>
    <string name="no_internet_loading">The server does not respond. Will use the cached data.</string>
</resources>
