<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FrequencyDetailsActivity">

    <TextView
        android:id="@+id/afd_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/afd_title_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/afd_frequency"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/frequency_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_title_label" />

    <TextView
        android:id="@+id/afd_frequency_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/frequency_value"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/afd_frequency"
        app:layout_constraintTop_toBottomOf="@+id/afd_title_label" />

    <TextView
        android:id="@+id/afd_span_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/span_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_frequency" />

    <TextView
        android:id="@+id/afd_span_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/span_value"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/afd_span_label"
        app:layout_constraintTop_toBottomOf="@+id/afd_frequency" />

    <TextView
        android:id="@+id/afd_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/type_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_span_label" />

    <TextView
        android:id="@+id/afd_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/type_value"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/afd_type_label"
        app:layout_constraintTop_toBottomOf="@+id/afd_span_value" />

    <TextView
        android:id="@+id/afd_eirp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        android:text="@string/eirp_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_frequency" />

    <TextView
        android:id="@+id/afd_eirp_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/eirp_value"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/afd_eirp_label"
        app:layout_constraintTop_toBottomOf="@+id/afd_frequency" />

    <TextView
        android:id="@+id/adf_wave_length_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        android:text="@string/wave_length_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_span_label" />

    <TextView
        android:id="@+id/afd_wave_length_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:text="@string/wave_length_value"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/adf_wave_length_label"
        app:layout_constraintTop_toBottomOf="@+id/afd_span_label" />

    <TextView
        android:id="@+id/afd_use_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/use_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_space_checkbox" />

    <TextView
        android:id="@+id/afd_use_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/use_value"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_use_label" />

    <TextView
        android:id="@+id/afd_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/mode_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_use_value" />

    <TextView
        android:id="@+id/afd_mode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/mode_value"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_mode_label" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/afd_sub_frequencies"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_mode_value" />

    <CheckBox
        android:id="@+id/afd_space_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:text="@string/space_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_type_label" />

    <CheckBox
        android:id="@+id/afd_emergency_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="100dp"
        android:clickable="false"
        android:text="@string/emergency_label"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afd_type_label" />

</android.support.constraint.ConstraintLayout>